[gd_scene load_steps=14 format=2]

[ext_resource path="res://DiceSprites/D6.png" type="Texture" id=1]
[ext_resource path="res://Scripts/DiceSprite.gd" type="Script" id=2]
[ext_resource path="res://UI/Roboto-Bold.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://UI/my_theme.tres" type="Theme" id=4]
[ext_resource path="res://DiceSprites/Shield.png" type="Texture" id=5]

[sub_resource type="DynamicFont" id=3]
font_data = ExtResource( 3 )

[sub_resource type="Animation" id=5]
resource_name = "Block"

[sub_resource type="Animation" id=4]
resource_name = "Break"
tracks/0/type = "value"
tracks/0/path = NodePath(".:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=7]
resource_name = "Heal"

[sub_resource type="Animation" id=8]
resource_name = "Heasl"

[sub_resource type="Animation" id=1]
resource_name = "Roll"
tracks/0/type = "method"
tracks/0/path = NodePath(".")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"values": [ {
"args": [  ],
"method": "roll"
}, {
"args": [  ],
"method": "roll"
}, {
"args": [  ],
"method": "roll"
}, {
"args": [  ],
"method": "roll"
}, {
"args": [  ],
"method": "roll"
}, {
"args": [  ],
"method": "roll"
}, {
"args": [  ],
"method": "roll"
}, {
"args": [  ],
"method": "roll"
}, {
"args": [  ],
"method": "roll"
}, {
"args": [  ],
"method": "roll"
}, {
"args": [  ],
"method": "final_roll"
} ]
}

[sub_resource type="Animation" id=6]
resource_name = "Target"

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 14, 13.5 )

[node name="FieldDice" type="Sprite"]
scale = Vector2( 2, 2 )
texture = ExtResource( 1 )
script = ExtResource( 2 )

[node name="Face" type="Sprite" parent="."]
position = Vector2( -0.5, 0 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 5 )

[node name="Num" type="Label" parent="."]
self_modulate = Color( 0, 0, 0, 1 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -36.0
margin_top = -25.5
margin_right = 4.0
margin_bottom = -6.5
theme = ExtResource( 4 )
custom_fonts/font = SubResource( 3 )
text = "6"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Block = SubResource( 5 )
anims/Break = SubResource( 4 )
anims/Heal = SubResource( 7 )
anims/Heasl = SubResource( 8 )
anims/Roll = SubResource( 1 )
anims/Target = SubResource( 6 )

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 0, 0.5 )
shape = SubResource( 2 )

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="mouse_entered" from="Area2D" to="." method="_on_Area2D_mouse_entered"]
[connection signal="mouse_exited" from="Area2D" to="." method="_on_Area2D_mouse_exited"]
